testsuite/tests/typecheck/should_fail/T15527.stderr

T15527.hs:4:6: error:
    Illegal visible type application ‘@Int’
      Perhaps you intended to use TypeApplications
